--- a/unit1.lfm
+++ b/unit1.lfm
@@ -7,6 +7,7 @@ object Form1: TForm1
   ClientHeight = 186
   ClientWidth = 403
   DesignTimePPI = 120
+  OnCreate = FormCreate
   LCLVersion = '1.8.4.0'
   object MassEdit: TFloatSpinEdit
     Left = 128
